# SimpleMessagerBase

./: .clang-format  CMakeLists.txt  LICENSE  README.md  main.cpp  spanmutator.cpp  spanmutator.h
base/: client.cpp  client.h  idgenerator.cpp  idgenerator.h  message.cpp  message.h  mutator.cpp  mutator.h  mutatorloader.cpp  mutatorloader.h
encrytpion/: rsamutator.cpp  rsamutator.h
network/: udpclient.cpp  udpclient.h
